--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "google-api-python-client>=2.174.0",
+    "google-auth>=2.40.3",
+    "google-auth-httplib2>=0.2.0",
+    "google-auth-oauthlib>=1.2.2",
+    "google-cloud-dlp>=3.31.0",
+    "ipykernel>=6.29.5",
+    "jdc>=0.0.9",
     "numpy>=2.3.1",
+    "pandas>=2.3.0",
 ]
